Further optimizations